# ai_research

./: .devcontainer.json  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  __init__.py  config.py  pyproject.toml  requirements.txt  runner.py  store.py  uv.lock.cpu  uv.lock.cuda  uv.lock.rocm
.github/workflows/: on-pr.yaml  on-push.yaml
common/: CLAUDE.md  __init__.py  config.py  runner.py  store.py
common/dl/: CLAUDE.md  config.py  constants.py  runner.py  store.py  train.py  types.py
common/dl/datamodule/: __init__.py  base.py
common/dl/litmodule/: __init__.py  base.py  classification.py  store.py  utils.py
common/dl/litmodule/_nnmodule/: feedforward.py  store.py
common/dl/litmodule/_nnmodule/autoregression/: base.py  discriminative.py  feedforward.py  store.py
common/dl/litmodule/_nnmodule/cond_autoreg/: store.py
common/dl/litmodule/_nnmodule/cond_diffusion/: store.py
common/dl/litmodule/_nnmodule/diffusion/: dit_1d_1d.py
common/dl/litmodule/classification/: __init__.py  base.py
common/dl/litmodule/cond1d_target1d/: autoregression.py  base.py  diffusion.py  store.py
common/dl/litmodule/cond_1d_target_1d/: autoregression.py  base.py  diffusion.py  store.py
common/dl/litmodule/nnmodule/: __init__.py  feedforward.py  mamba2.py  mlp.py  store.py
common/dl/litmodule/nnmodule/autoregression/: base.py  discriminative.py  feedforward.py  generative.py  mamba2.py
common/dl/litmodule/nnmodule/cond_autoreg/: base.py  discriminative.py  generative.py  store.py
common/dl/litmodule/nnmodule/cond_diffusion/: dit_1d_1d.py  original_dit.py  store.py
common/dl/litmodule/nnmodule/diffusion/: __init__.py  dit_1d_1d.py
common/dl/utils/: __init__.py  lightning.py
common/dl/utils/diffusion/: __init__.py  diffusion_utils.py  gaussian_diffusion.py  respace.py  timestep_sampler.py
common/ne/: CLAUDE.md  __init__.py  config.py  evolve.py  fit.py  runner.py  store.py  train.py
common/ne/agent/: __init__.py
common/ne/algo/: base.py  simple_ga.py  store.py
common/ne/eval/: act_pred.py  adv_gen.py  base.py  env.py  human_act_pred.py  imitation.py  score.py  store.py
common/ne/eval/score/: base.py  gym.py  torchrl.py
common/ne/net/: feedforward.py  protocol.py  recurrent.py
common/ne/net/dynamic/: __init__.py  evolution.py
common/ne/optim/: base.py  cmaes.py  es.py  ga.py
common/ne/pop/: population.py
common/ne/pop/_nets/dynamic/: base.py  compute.py  utils.py
common/ne/pop/_nets/static/: feedforward.py  recurrent.py
common/ne/popu/: actor.py  adv_gen.py  base.py  store.py
common/ne/popu/nets/: base.py  store.py
common/ne/popu/nets/dynamic/: CLAUDE.md  PARALLELIZATION_REPORT.md  base.py  evolution.py  utils.py
common/ne/popu/nets/static/: base.py  feedforward.py  recurrent.py
common/ne/space/: __init__.py  base.py  reinforcement.py
common/ne/utils/: __init__.py  compute.py  evolve.py  exchange.py  initialize.py  readwrite.py  validate.py
common/utils/: beartype.py  hydra.py  hydra_zen.py  misc.py  runner.py  torch.py  wandb.py
docker/: cpu
docs/: conf.py  execution.rst  execution_with_apptainer.rst  execution_with_docker.rst  installation.rst
optim/: config.py  runner.py
optim/dl/: config.py  runner.py  store.py  train.py
optim/dl/datamodule/: __init__.py  base.py
optim/dl/litmodule/: __init__.py  base.py  store.py
optim/dl/litmodule/classification/: __init__.py  base.py
optim/dl/litmodule/nnmodule/: __init__.py
optim/dl/utils/: __init__.py  lightning.py
optim/ne/: config.py  fit.py  runner.py
optim/ne/agent/: __init__.py  base.py
optim/ne/space/: __init__.py  base.py  reinforcement.py
optim/ne/utils/: __init__.py  compute.py  evolve.py  exchange.py  initialize.py  readwrite.py  validate.py  wandb.py
projects/classify_mnist/: __init__.py  datamodule.py  datamodule_test.py  infer.py  litmodule.py  train.py
projects/classify_mnist/task/: fnn.yaml  mlp.yaml  mlp_beluga.yaml  mlp_cpu.yaml
projects/dl_classify_mnist/: datamodule.py  litmodule.py  train.py
projects/dl_classify_mnist/task/: fnn.yaml
projects/ne_control_act_pred/: __main__.py
projects/ne_control_act_pred/task/: _.yaml  cartpole.yaml
projects/ne_control_adv_gen/: __main__.py
projects/ne_control_adv_gen/task/: _.yaml  cartpole.yaml
projects/ne_control_human_act_pred/: __main__.py
projects/ne_control_human_act_pred/task/: _.yaml  acrobot.yaml  cartpole.yaml  lunarlander.yaml  mountaincar.yaml
projects/ne_control_score/: __main__.py  agent.py  space.py
projects/ne_control_score/task/: _.yaml  cartpole-dynamic.yaml  main.yaml
projects/ne_control_score_encoded/: __main__.py  collect.py  datamodule.py  eval.py  litmodule.py  nnmodule.py  train.py
projects/ne_control_score_encoded/task/: _.yaml  cartpole.yaml  train_.yaml  train_cartpole.yaml
projects/ne_ffn_discrete_control_score/task/: cartpole.yaml
test/: Dockerfile
utils/: __init__.py  hydra_zen.py  misc.py  mpi4py.py  runner.py  wandb.py
