[tool.setuptools.packages.find]
include = ["ai_research"]

[tool.uv]
package = false
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[project]
name = "ai_research"
description = "AI research repo"
version = "0.0.1"
requires-python = "~=3.12.0"
dependencies = [
    ###########################################################################
    ###                              MANDATORY                              ###
    ###########################################################################
    "torch==2.9.1",
    "torchvision==0.24.1",
    "torchaudio==2.9.1",
    "triton==3.5.1",
    "hydra-core==1.3.2", # Configuration management
    "hydra-zen==0.16.0", # Cleaner Hydra configs
    "beartype==0.22.9", # Dynamic type checking
    "wandb==0.23.1", # Logging
    "hydra-submitit-launcher", # Launcher config
    # Fork that implements a `python` argument that connects to the existing
    # `submitit` `python` argument. Also modifies the `local` launcher
    # so that it queues the jobs sequentially rather than in parallel.
    ###########################################################################
    ###########################################################################
    ###                              OPTIONAL                               ###
    ###########################################################################
    ###########################################################################
    "matplotlib==3.10.8", # Plotting
    "hydra-optuna-sweeper==1.2.0", # Hyperparameter optimization
    "autorl-sweepers", # Hyperparameter optimization
    # Fork that removes anything related to `deepcave` due to its conflicts
    # with other dependencies.
    "jaxtyping==0.3.3", # Torch tensor annotations
    "einops==0.8.1", # Makes shape transformations more readable
    "jupyterlab==4.5.0", # Jupyter notebook
    "jupyterlab-code-formatter==3.0.2", # Jupyter code formatter
    "ipywidgets==8.1.8", # Jupyter widgets
    "h5py==3.15.1", # HDF5 file format load/save
    "opencv-python==4.8.1.78", # Image processing (compatible with numpy<2)
    ###########################################################################
    ###########################################################################
    ###                     MANDATORY for /common/dl/                       ###
    ###########################################################################
    ###########################################################################
    "lightning==2.6.0", # PyTorch wrapper to decrease boilerplate
    ###########################################################################
    ###########################################################################
    ###                      OPTIONAL for /common/dl/                       ###
    ###########################################################################
    ###########################################################################
    "transformers==4.57.3", # Pre-trained models published on Hugging Face
    "diffusers==0.36.0", # Diffusion models published on Hugging Face
    "timm==1.0.22", # Image models
    "datasets==4.4.1", # Datasets published on Hugging Face
    "x-transformers==2.11.24", # Transformer utils
    "mambapy", # Mamba (latest commit)
    "denoising-diffusion-pytorch==2.2.5", # Diffusion models
    "vector-quantize-pytorch==1.27.14", # Vector quantization utils
    "accelerate==1.12.0", # Not sure what this is for but PEFT crashes w/ 0.30
    "peft==0.18.0", # Fine-tuning
    ###########################################################################
    ###########################################################################
    ###                           fMRI libraries                            ###
    ###########################################################################
    ###########################################################################
    "nibabel==5.3.3", # Neuroimaging format accessor
    "nilearn==0.12.1", # ML for neuroimaging
    ###########################################################################
    ###########################################################################
    ###                          Audio libraries                            ###
    ###########################################################################
    ###########################################################################
    "librosa==0.11.0",
    ###########################################################################
    ###########################################################################
    ###                            RL libraries                             ###
    ###########################################################################
    ###########################################################################
    "gymnasium[classic-control,box2d]==1.2.2", # RL/IL environments
    "torchrl==0.10.1", # For reinforcement/imitation Learning tasks
    ###########################################################################
    ###########################################################################
    ###                      OPTIONAL for /common/ne/                       ###
    ###########################################################################
    ###########################################################################
    "ordered-set==4.1.0", # Sets w/ deterministic order (for dynamic nets)
    ###########################################################################
    ###########################################################################
    ###                        MANDATORY for docs/                          ###
    ###########################################################################
    ###########################################################################
    "sphinx==8.1.3", # Documentation generator (< 9.0 required by furo)
    "esbonio==1.0.0", # Language server to render sphinx
    "furo==2025.9.25", # Documentation theme
    "sphinx-copybutton==0.5.2", # Copy button for code blocks
    "sphinx-paramlinks==0.6.0", # Links to parameters in other pages
    "sphinx-autodoc-typehints==2.5.0", # More type hint customization
    "myst-parser==4.0.1", # Embeds markdown in sphinx
    
    ###########################################################################
    ###########################################################################
    ###                            DEVELOPMENT                              ###
    ###########################################################################
    ###########################################################################
    "black[jupyter]==25.12.0", # Python Formatter
    "ruff==0.14.9", # Python Linter
    "doc8==2.0.0", # Documentation linter
    "yamllint==1.37.1", # YAML linter
    "pre-commit==4.5.0", # Git commit hooks
    "mypy==1.19.1", # Static type checker
    "pytest==9.0.2", # Testing framework

]

[[project.authors]]
name = "Maximilien Le Clei"
email = "github.laborer138@passmail.net"


[tool.uv.sources.hydra-submitit-launcher]
git = "https://github.com/maximilienleclei/hydra"
rev = "b7a44387ecc0ce85598d10b8d595cfe201cce74a"
subdirectory = "plugins/hydra_submitit_launcher"

[tool.uv.sources.autorl-sweepers]
git = "https://github.com/maximilienleclei/autorl-sweepers"
rev = "63e83bc79f6b5708d718b9904c5cda3f4a11cdb5"

[tool.uv.sources.mambapy]
git = "https://github.com/alxndrTL/mamba.py"
rev = "2cc168c78b2494557f45072c4b8daa9d6f5608c7"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D10", # D10X rules
           # D100 `undocumented-public-module`
           # https://docs.astral.sh/ruff/rules/undocumented-public-module/
           # D101 `undocumented-public-class`
           # https://docs.astral.sh/ruff/rules/undocumented-public-class/
           # D102 `undocumented-public-method`
           # https://docs.astral.sh/ruff/rules/undocumented-public-method/
           # D103 `undocumented-public-function`
           # https://docs.astral.sh/ruff/rules/undocumented-public-function/
           # D104 `undocumented-public-package`
           # https://docs.astral.sh/ruff/rules/undocumented-public-package/
           # D105 `undocumented-magic-method`
           # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
           # D106 `undocumented-public-nested-class`
           # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class/
           # D107 `undocumented-public-init`
           # https://docs.astral.sh/ruff/rules/undocumented-public-init/
           # Disabled to not require writing docstrings for everything.
    "D417", # `undocumented-param`
            # Missing argument description in the docstring for {definition}:
            # {name} Missing docstring in public `__init__`
            # https://docs.astral.sh/ruff/rules/undocumented-param/
            # This warning pops up even when the argument is simply
            # mentioned in the argument section but not given a description.
            # Disabled for flexibility of not giving a description for
    "EXE002", # `shebang-missing-executable-file`
            # The file is executable but no shebang is present
            # https://docs.astral.sh/ruff/rules/shebang-missing-executable-file/
            # Says it's not enforced in WSL, but looks like it is.
    "F722", # `forward-annotation-syntax-error`
            # Syntax error in forward annotation: {body}.
            # https://docs.astral.sh/ruff/rules/forward-annotation-syntax-error/
            # Disabled to be able to utilize Jaxtyping, see:
            # https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
    "G004", # `logging-f-string`
            # Logging statement uses f-string.
            # https://docs.astral.sh/ruff/rules/logging-f-string/
            # Disabled to make it less verbose to log since printing is
            # disabled, see: https://docs.astral.sh/ruff/rules/print/
    "TC001", # `typing-only-first-party-import`
              # Move application import {} into a type-checking block
              # https://docs.astral.sh/ruff/rules/typing-only-first-party-import/
              # Disabled as we use Beartype for dynamic type checking.
    "TC002", # `typing-only-third-party-import`
              # Move third-party import {} into a type-checking block
              # https://docs.astral.sh/ruff/rules/typing-only-third-party-import/
              # Disabled as we use Beartype for dynamic type checking.
]


[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"*_test.py" = [
    "S101",  # `assert`
             # Use of assert detected.
             # https://docs.astral.sh/ruff/rules/assert/
             # Disabled to be able to use assertions in test files.
    "PLR2004", # `magic-value-comparison`
               # Magic value used in comparison, consider replacing {value}
               # with a constant variable.
               # https://docs.astral.sh/ruff/rules/magic-value-comparison/
               # Disabled to be able to use magic values in test files.
]

[tool.doc8]
max-line-length = 79
# docs/index.rst:1: D000 Error in "include" directive:
# invalid option value: (option: "parser"; value: 'myst_parser.sphinx_')
# Parser "myst_parser.sphinx_" not found. No module named 'myst_parser'.
ignore = ["D000"]

[tool.mypy]
strict = true
allow_redefinition = true
ignore_missing_imports = true
